Finish Intermediate HTML

--- a/html-personal-site/contact.html
+++ b/html-personal-site/contact.html
@@ -10,11 +10,22 @@
     <img src="images/profile.png" width="200px" alt="Scott Profile Picture">
     <h1>Contact Me</h1>
     <p><strong>Name: </strong>Scott Gordon</p>
-    <p><strong>Email: </strong>scott.gordon72@outlook.com</p>
-    <p><strong>Phone: </strong>978-799-5732</p>
-    <p><strong>Address: </strong>260 Whitney Street, Apt 628</p>
+    <p><strong>Email: </strong>#########@outlook.com</p>
+    <p><strong>Phone: </strong>###-###-####</p>
+    <p><strong>Address: </strong>#########</p>
     <p><strong>City: </strong>Leominster</p>
     <p><strong>State: </strong>Massachusetts</p>
+    <hr>
+    <form action="mailto:scott.gordon72@outlook.com" method="post" enctype="text/plain">
+        <label>Your Name:</label>
+        <input type="text" name="yourName" value=""><br>
+        <label>Your Email:</label>
+        <input type="email" name="yourEmail" id=""><br>
+        <label>Your Message:</label><br>
+        <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
+        <input type="submit" name="">
+    </form>
+
 </body>
 
 </html>
