--- a/html-personal-site/index.html
+++ b/html-personal-site/index.html
@@ -3,14 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>♚ Scott's Personal Website 🎱</title>
+    <title>♟️Scott's Personal Website🎱</title>
 </head>
 
 <body>
-    <img src="images/profile.png" width="200px" alt="Scott Profile Picture">
-    <h1>Scott Gordon</h1>
-    <p><em>Platform Engineer</em></p>
-    <p>I am passionate of many things including but not limited to: chess, pocket billliards, art and coding</p>
+    <table cellspacing="10px">
+        <tr>
+            <td>
+                <img src="images/profile.png" width="200px" alt="Scott Profile Picture">
+            </td>
+            <td>
+                <h1>Scott Gordon</h1>
+                <p><em>Platform Engineer</em></p>
+                <p>I am passionate of many things including but not limited to: chess, pocket billliards, art and coding
+                </p>
+            </td>
+        </tr>
+    </table>
     <hr>
     <h3>Education</h3>
     <ul>
@@ -18,7 +27,65 @@
         <li><a href="https://learn.microsoft.com/en-us/certifications/">Microsoft certified</a></li>
         <li><a href="https://aws.amazon.com/certification/">Amazon certified</a></li>
     </ul>
-    <a href="hobbies.html">My Hobbies</a> 
+    <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="10px">
+        <thead>
+            <tr>
+                <th>Dates</th>
+                <th>Work</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2022-present</td>
+                <td>Slalom Consulting</td>
+            </tr>
+            <tr>
+                <td>2011-2022</td>
+                <td>Gordon Fitness</td>
+            </tr>
+            <tr>
+                <td>2008-2011</td>
+                <td>Bally Total Fitness</td>
+            </tr>
+            <tr>
+                <td>2004-2008</td>
+                <td>Lowes Home Improvement</td>
+            </tr>
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <table cellspacing="10px">
+        <thead>
+            <tr>
+                <th>Skill</th>
+                <th>Rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Python</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>JavaScript</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>Java</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+        </tbody>
+        <tfoot></tfoot>
+    </table>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
     <a href="contact.html">Contact Me</a>
 
 </html>
