Finish Introduction to CSS

--- a/html-personal-site/contact.html
+++ b/html-personal-site/contact.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Contact Me</title>
 </head>
 
 <body>
-    <img src="images/profile.png" width="200px" alt="Scott Profile Picture">
+    <img class="profile" src="images/profile.png" width="200px" alt="Scott Profile Picture">
+    <hr>
     <h1>Contact Me</h1>
     <p><strong>Name: </strong>Scott Gordon</p>
     <p><strong>Email: </strong>#########@outlook.com</p>
