--- a/html-personal-site/index.html
+++ b/html-personal-site/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>♟️Scott's Personal Website🎱</title>
 </head>
 
@@ -10,7 +11,7 @@
     <table cellspacing="10px">
         <tr>
             <td>
-                <img src="images/profile.png" width="200px" alt="Scott Profile Picture">
+                <img class="profile" src="images/profile.png" width="200px" alt="Scott Profile Picture">
             </td>
             <td>
                 <h1>Scott Gordon</h1>
