--- a/html-personal-site/hobbies.html
+++ b/html-personal-site/hobbies.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>My Hobbies</title>
 </head>
 <body>
-    <img src="images/profile.png" width="200px" alt="Scott Profile Picture">
+    <img class="profile" src="images/profile.png" width="200px" alt="Scott Profile Picture">
+    <hr>
     <h3>My Hobbies</h3>
     <ol>
         <li>Coding</li>
